# delegate

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: delegate-config.cmake.in
include/delegate/: delegate.h
tests/: CMakeLists.txt  delegate_test.cpp
